7/11/14 #74 add 'Skip' button to game in dev mode
7/11/14 #71 scale diameter of starts in LevelCompletedNode for levels with lots of stars
7/11/14 #71 support different numbers of equations per game level, to support 'playAll' query parameter
7/11/14 #72 show correct coefficients when running in dev mode
7/11/14 #71 add 'playAll' query parameter, to iterate over all possible challenges in the game
7/10/14 #55 check that both timerID and intervalID are null, so that vegas.NumberPicker doesn't get stuck
# 1.0.0-dev.6 7/7/14
7/7/14 #27 add option to specify font size for equations, so that we can have screen-specific sizes
7/7/14 adjust layout of pickers relative to symbols
7/7/14 fix: when pressing 'Continue' button at end of game, remove reward only if it exists
7/7/14 move initial position of game dialog down slightly
7/7/14 #67 more sophisticated drag bounds for game dialog, accounts for dialog dimensions
7/7/14 #67 crude drag bounds for game dialog
7/7/14 #67 clean up how location of game dialog is handled, in preparation for enforcing drag bounds
7/7/14 rename GameModel.gameState to GameModel.states
7/7/14 factor out private constants in game model
7/7/14 rename Molecule.imageConstructor to nodeConstructor, since molecules are scenery Nodes, not images
7/7/14 pull out Molecule into its own js file, since its public interface is used outside of MoleculeFactory
7/7/14 remove width and height from the model, it is relevant only to the view
7/7/14 #68 scale game buttons uniformly to fit the horizontal space between the boxes
7/7/14 fix Tools combo box, so that its pop-up list is always on top
7/7/14 use relative layout for IntroductionView
7/7/14 reorder IntroductionView to correspond to top-to-bottom layout of nodes
7/7/14 clean up implementation of 'Tools' combo box
7/7/14 Introduction: left-align radio buttons with reactants box
7/7/14 Introduction: remove Reset All button from equation-choice control